--- a/cloud_intro/end2end/events/docker-compose.yml
+++ b/cloud_intro/end2end/events/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
-      KAFKA_CREATE_TOPICS: "topic_test:1:1"
+      KAFKA_CREATE_TOPICS: "user-events:1:1"
       KAFKA_NUM_PARTITIONS: 1
     networks:
       - events-manager
@@ -50,7 +50,7 @@ services:
     depends_on:
       - kafka0
     ports:
-      - "8080:8080"
+      - "0.0.0.0:8080:8080"
     restart: always
     environment:
       - KAFKA_CLUSTERS_0_NAME=base
