--- a/cloud_intro/end2end/events/docker-compose.yml
+++ b/cloud_intro/end2end/events/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       - events-manager
 
   kafka0:
+    build:
+      context: .
+      args:
+        HOST_IP: ${HOST_IP}
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
@@ -18,8 +22,8 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       # KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://$(ipconfig getifaddr en0):9092 #For Mac
-      # KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://$(ip -o -4 addr show <interface> | awk '{print $4}' | cut -d/ -f1):9092 #For UbuntuServer
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://192.168.1.136:9092 #For Mac `ipconfig getifaddr en0` For UbuntuServer `ip -o -4 addr show wlan0 | awk '{print $4}' | cut -d/ -f1`
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
       KAFKA_CREATE_TOPICS: "user-events:1:1"
@@ -28,17 +32,22 @@ services:
       - events-manager
   
   kafka1:
+    build:
+      context: .
+      args:
+        HOST_IP: ${HOST_IP}
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
+
     ports:
       - 9093:9093
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       # KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://$(ipconfig getifaddr en0):9092 #For Mac
-      # KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://$(ip -o -4 addr show <interface> | awk '{print $4}' | cut -d/ -f1):9092 #For UbuntuServer      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://192.168.1.136:9092 #For Mac `ipconfig getifaddr en0` For UbuntuServer `ip -o -4 addr show wlan0 | awk '{print $4}' | cut -d/ -f1`
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
       KAFKA_CREATE_TOPICS: "user-events:1:1"
