--- a/cloud_intro/end2end/customer_orders/docker-compose.yml
+++ b/cloud_intro/end2end/customer_orders/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-  postgres:
+  oltp-db:
     image: postgres:latest
     container_name: ecommerce_db
     environment:
