--- a/cloud_intro/end2end/analytical_layer/docker-compose.yml
+++ b/cloud_intro/end2end/analytical_layer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-  olap-db:
+  analytical_db:
     image: clickhouse/clickhouse-server:latest
     container_name: olap_db
     ports:
@@ -20,7 +20,7 @@ services:
     image: metabase/metabase:v0.44.6
     container_name: metabase
     depends_on:
-      - olap-db
+      - analytical_db
     ports:
       - "3000:3000"
     environment:
