--- a/cloud_intro/end2end/delivery_app/Makefile
+++ b/cloud_intro/end2end/delivery_app/Makefile
@@ -3,10 +3,10 @@
 ROOT_FOLDER := $(shell pwd)
 
 launch-events-brokers-mac:
-	@HOST_IP=$(shell ipconfig getifaddr en0) docker-compose up
+	@HOST_IP=$(shell ipconfig getifaddr en0) docker-compose up -d
 
 launch-events-brokers-ubuntu:
-	@HOST_IP=$(shell ip -o -4 addr show wlan0 | awk '{print $$4}' | cut -d/ -f1) docker-compose up
+	@HOST_IP=$(shell ip -o -4 addr show wlan0 | awk '{print $$4}' | cut -d/ -f1) docker-compose up -d
 
 stop-events-brokers:
 	docker-compose down
