--- a/cloud_intro/end2end/analytical_layer/docker/DockerFile
+++ b/cloud_intro/end2end/analytical_layer/docker/DockerFile
@@ -4,18 +4,16 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-COPY ../../requirements.txt /app/requirements.txt
-COPY ../el_delivery /app/el_delivery
-COPY ../el_orders /app/el_orders
-COPY start.sh /app/start.sh
+COPY requirements.txt /app/requirements.txt
+COPY analytical_layer/el_delivery /app/el_delivery
+COPY analytical_layer/el_orders /app/el_orders
+COPY analytical_layer/analytical_utils /app/analytical_utils
+COPY analytical_layer/docker/cron_run.sh /app/cron_run.sh
+COPY analytical_layer/docker/start_cron.sh /app/start_cron.sh
+
 
 RUN pip install --no-cache-dir -r /app/requirements.txt 
 
-RUN apt-get update && apt-get install -y cron && rm -rf /var/lib/apt/lists/* \
-    && chmod +x /app/start.sh
+RUN apt-get update && apt-get install -y cron && rm -rf /var/lib/apt/lists/* && chmod +x /app/cron_run.sh /app/start_cron.sh
 
-RUN echo "*/2 * * * * root KAFKA_IP=\$KAFKA_IP /bin/bash /app/start.sh >> /var/log/cron.log 2>&1" > /etc/cron.d/cron_job
-
-RUN chmod 0644 /etc/cron.d/cron_job && touch /var/log/cron.log
-
-CMD ["bash", "-c", "cron && tail -f /var/log/cron.log"]
+CMD ["/app/start_cron.sh"]
