[CHANGED] Updating README and Makefile to run apps automatically

--- a/cloud_intro/end2end/delivery_app/Makefile
+++ b/cloud_intro/end2end/delivery_app/Makefile
@@ -8,5 +8,8 @@ launch-events-brokers-mac:
 launch-events-brokers-ubuntu:
 	@HOST_IP=$(shell ip -o -4 addr show wlan0 | awk '{print $$4}' | cut -d/ -f1) docker-compose up -d
 
+launch-events-brokers-manual-ip:
+	@HOST_IP=<your-machine-ip> docker-compose up -d
+
 stop-events-brokers:
 	docker-compose down --volumes
