--- a/gcp_setup/excercise/requirements.txt
+++ b/gcp_setup/excercise/requirements.txt
@@ -1,7 +1,5 @@
-confluent-kafka==2.7.0
 requests==2.32.3
 psycopg2-binary==2.9.10
 clickhouse-driver==0.2.9
 google-auth==2.37.0
-urllib3==2.2.3
-packaging==24.2
+google-cloud-pubsub==2.27.1
