[ADDED] Adding terraform files and modifying README

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,11 @@ cython_debug/
 **/plugins/**
 
 **/.vscode/** 
+
+
+# Terraform
+
+terraform.tfstate
+terraform.tfstate.backup
+.terraform/
+.terraform.**
