--- a/gcp_datawarehouse/excercise_end2end/requirements.txt
+++ b/gcp_datawarehouse/excercise_end2end/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.32.3
 psycopg2-binary==2.9.10
-clickhouse-driver==0.2.9
 google-auth==2.37.0
 google-cloud-pubsub==2.27.1
+google-cloud-bigquery==3.27.0
