[ADDED] Adding excercise NoSQL Stocks

--- a/gcp_datalake/excercise_end2end/analytical_layer/dbt_template/edem_project/dbt_project.yml
+++ b/gcp_datalake/excercise_end2end/analytical_layer/dbt_template/edem_project/dbt_project.yml
@@ -36,10 +36,10 @@ models:
       - "{{ ensure_dataset_exists(target.dataset) }}"
     delivery:
       mart:
-        +dataset: delivery_mart
+        +dataset: delivery_gold
     orders:
       mart:
-        +dataset: order_mart
+        +dataset: order_gold
     analytics:
       +dataset: analytics
 
