--- a/gcp_datawarehouse/excercise_end2end/analytical_layer/docker-compose.yml
+++ b/gcp_datawarehouse/excercise_end2end/analytical_layer/docker-compose.yml
@@ -4,8 +4,6 @@ services:
   metabase:
     image: metabase/metabase:v0.44.6
     container_name: metabase
-    depends_on:
-      - analytical_db
     ports:
       - "3000:3000"
     environment:
@@ -13,3 +11,8 @@ services:
       MB_DB_FILE: /metabase-data/metabase.db
       MB_PLUGINS_DIR: /plugins
     restart: always
+    volumes:
+      - metabase_data:/metabase-data
+
+volumes:
+  metabase_data:
